Bugfix/etd 1401 connectors coinmate.api dont co  (#470)
* feature/ETD-1340-container-update-simplecoin-csv

* bugfix/ETD-1401-connectors-coinmate.api-dont-co-

* new version

* Feature/etd 1418 rates add exchange rate for spe (#454)

* new version

* bugfix/ETD-1401-connectors-coinmate.api-dont-co-

---------

Co-authored-by: martinkyov <martin.kyovsky@generalbytes.com>
Co-authored-by: Martin <89248739+martinkyov@users.noreply.github.com>